[project]
name = "images_base64"
description = "Based on the original SaveImage node from ComfyUI This ComfyUI node provides functionality to save images in PNG format while simultaneously generating and returning their Base64 encoded strings. This is particularly useful for applications that require image data to be transmitted as strings, such as web applications."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/GrailGreg/images_base64"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "grailgreg"
DisplayName = "images_base64"
Icon = ""
